--- a/res/gameview/GameView.fxml
+++ b/res/gameview/GameView.fxml
@@ -34,77 +34,85 @@
             <Image url="@faceimage/faceblue.png" />
          </image>
       </ImageView>
-      <Label fx:id="Level" layoutX="860.0" layoutY="136.0" prefHeight="20.0" prefWidth="100.0" text="Level">
-         <graphic>
-            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../menu/bg.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/bubble.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/damage.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/damage.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../menu/bg.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/item_050.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="885.0" layoutY="130.0" prefHeight="20.0" prefWidth="40.0" text="Level">
          <font>
             <Font name="Berlin Sans FB" size="17.0" />
          </font>
       </Label>
-      <Label fx:id="Life" layoutX="860.0" layoutY="230.0" prefHeight="20.0" prefWidth="100.0" text="Life">
-         <graphic>
-            <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../menu/bg.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Label layoutX="885.0" layoutY="220.0" prefHeight="20.0" prefWidth="32.0" text="Life">
          <font>
             <Font name="Berlin Sans FB" size="17.0" />
          </font>
       </Label>
-      <Label fx:id="Score" layoutX="860.0" layoutY="184.0" prefHeight="20.0" prefWidth="100.0" text="Score">
-         <graphic>
-            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../menu/bg.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Label layoutX="885.0" layoutY="175.0" prefHeight="20.0" prefWidth="39.0" text="Score">
          <font>
             <Font name="Berlin Sans FB" size="17.0" />
          </font>
       </Label>
-      <Label fx:id="Enemies" layoutX="860.0" layoutY="338.0" prefHeight="20.0" prefWidth="100.0" text="Enemies">
-         <graphic>
-            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../menu/bg.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Label layoutX="885.0" layoutY="310.0" prefHeight="20.0" prefWidth="75.0" text="Range">
          <font>
             <Font name="Berlin Sans FB" size="17.0" />
          </font>
       </Label>
-      <Label fx:id="Bomb" layoutX="860.0" layoutY="279.0" prefHeight="20.0" prefWidth="100.0" text="Bomb">
-         <graphic>
-            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../menu/bg.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Label layoutX="885.0" layoutY="265.0" prefHeight="20.0" prefWidth="49.0" text="Bomb">
          <font>
             <Font name="Berlin Sans FB" size="17.0" />
          </font>
       </Label>
-      <Label layoutX="860.0" layoutY="394.0" prefHeight="20.0" prefWidth="100.0" text="Power">
-         <graphic>
-            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../menu/bg.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Label layoutX="885.0" layoutY="435.0" prefHeight="20.0" prefWidth="75.0" text="Immortal">
          <font>
             <Font name="Berlin Sans FB" size="17.0" />
          </font>
       </Label>
+      <Label layoutX="885.0" layoutY="355.0" prefHeight="20.0" prefWidth="49.0" text="Speed">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="850.0" layoutY="440.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/faceBW.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/faceblue.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="885.0" layoutY="400.0" prefHeight="20.0" prefWidth="32.0" text="Left">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="855.0" layoutY="395.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/enemy.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
