--- a/res/gameview/GameMPView.fxml
+++ b/res/gameview/GameMPView.fxml
@@ -19,5 +19,85 @@
             <Font name="Berlin Sans FB" size="24.0" />
          </font>
       </Label>
+      <ImageView fitHeight="62.0" fitWidth="59.0" layoutX="859.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../menu/blue_panel.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="857.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/bubble.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="857.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/damage.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="857.0" layoutY="193.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/item_050.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="925.0" layoutY="44.0" prefHeight="20.0" prefWidth="32.0" text="Life">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="887.0" layoutY="153.0" prefHeight="20.0" prefWidth="75.0" text="Range">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="887.0" layoutY="108.0" prefHeight="20.0" prefWidth="49.0" text="Bomb">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="887.0" layoutY="198.0" prefHeight="20.0" prefWidth="49.0" text="Speed">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="62.0" fitWidth="59.0" layoutX="859.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../menu/blue_panel.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="925.0" layoutY="317.0" prefHeight="20.0" prefWidth="32.0" text="Life">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="856.0" layoutY="377.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/bubble.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="856.0" layoutY="422.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/damage.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="856.0" layoutY="467.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@item/item_050.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="886.0" layoutY="427.0" prefHeight="20.0" prefWidth="75.0" text="Range">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="886.0" layoutY="382.0" prefHeight="20.0" prefWidth="49.0" text="Bomb">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="886.0" layoutY="472.0" prefHeight="20.0" prefWidth="49.0" text="Speed">
+         <font>
+            <Font name="Berlin Sans FB" size="17.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
